# netprofiler_lite

./: .gitignore  Cargo.toml  README.md  flake.nix  netprofiler_lite.toml
.github/workflows/: ci.yml  release.yml
docs/: nix.md  preseed.md  release.md  usage.md
netprofiler_lite/: Cargo.toml  README.md  flake.nix
netprofiler_lite/scripts/: seed_artifacts.sh
netprofiler_lite/src/: main.rs
scripts/: ndg_object_storage_benchmark.sh  seed_artifacts.sh
src/: main.rs
