[package]
name = "netprofiler_lite"
version = "0.1.11"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "netprofiler_lite"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytes = "1.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
futures = "0.3"
hmac = "0.12"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
